Fixed tabs so they don't jump around the damn page.

--- a/public/stylesheets/hoptopus.css
+++ b/public/stylesheets/hoptopus.css
@@ -1,3 +1,7 @@
+/* This makes it possible to have the scroll bar on every page so it doesn't
+    jump when we actually need it. */
+html { height: 101% }
+
 body {
   background-color: #fff;
   color: #333; }
